5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1717_2525.log
== TEST (2019-05-11 22:25:05) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i < z):
	r = z%(2i + 1)
		if (div == 0):
			div = div + 1
	i = i+1
print(div)	
-- ERROR:
File "XXXX", line 6
    r = z%(2i + 1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:25:37) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i < z):
	r = z%(2*i + 1)
		if (div == 0):
			div = div + 1
	i = i+1
print(div)	
-- ERROR:
File "XXXX", line 7
    if (div == 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:26:14) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i < z):
	r = z%(2*i + 1)
	if (r == 0):
		div = div + 1
	i = i+1
print(div)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:26:49) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(2*i + 1)
	if (r == 0):
		div = div + 1
	i = i+1
print(div)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:27:32) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(i + 1)
	if (r == 0):
		div = div + 1
	i = i+1
print(div)	
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:27:44) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(i + 1)
	if (r == 0):
		div = div + 1
	i = i+1
print(div)	
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:27:57) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(i + 1)
	if (r == 0):
		div = div + 1
	i = i+1
print(div)	
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:28:08) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(i + 1)
	if (r == 0):
		div = div + 1
	i = i+1
print(div)	
-- EXECUTION TIME:
0.129948
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
6
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
3
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:31:35) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(i + 1)
	if (r == 0):
		div = div + 1
	i = i+1
if (div == 1):
	print(1,"divisor")	
else:
	print(div, "divisores")
-- OUTPUT:
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:31:46) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(i + 1)
	if (r == 0):
		div = div + 1
	i = i+1
if (div == 1):
	print(1,"divisor")	
else:
	print(div, "divisores")
-- EXECUTION TIME:
0.178949
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
8 divisores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:34:09) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(i + 1)
	if (r == 0):
		print(i+1)
		div = div + 1
	i = i+1
if (div == 1):
	print(1,"divisor")	
else:
	print(div, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:34:33) 
-- CODE:
#entrada de um numero inteiro
z = int(input("Digite um numero inteiro: "))
i = 0
div = 0
while (i <= z):
	r = z%(i + 1)
	if (r == 0):
		print(i+1)
		div = div + 1
	i = i+1
if (div == 1):
	print(1,"divisor")	
else:
	print(div, "divisores")
-- EXECUTION TIME:
0.22985
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1
2
3
4
6
12
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1
7
49
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1
2
3
5
6
10
15
30
8 divisores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
